PROTON-2483: epoll proactor TSAN race - ensure task locks not held when calling pni_timer_set()